ability to clear saves - todo copy saves, no longer flex-wrap because it doesnt work like i want it to

--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -5,7 +5,7 @@
 
 html {
 	font-size: 1.2em;
-	overflow-y: hidden;
+	overflow: hidden;
 }
 
 .noselect {
@@ -82,13 +82,12 @@ button {
 	position: absolute;
 	bottom: 0;
 	left: 0;
-	height: 60px;
 }
 
 #bottom div {
 	display: flex;
 	flex-direction: row;
-	flex-wrap: wrap;
+	height: 60px;
 }
 
 #bottom div div p {
